- node.js dependency => static html

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <title>i18next Editor</title>
 
   <!-- Included CSS Files -->
-  <link rel="stylesheet" href="/stylesheets/foundation.min.css" />
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="./stylesheets/foundation.min.css" />
+  <link rel='stylesheet' href='./stylesheets/style.css' />
   <!-- FontAwesome -->
-  <link rel="stylesheet" href=" /stylesheets/font-awesome.css" />
+  <link rel="stylesheet" href="./stylesheets/font-awesome.css" />
 
   <!--[if IE 7]>
-    <link rel="stylesheet" href="/stylesheets/font-awesome-ie7.css" />
+    <link rel="stylesheet" href="./stylesheets/font-awesome-ie7.css" />
   <![endif]-->
 
-  <script src="/javascripts/modernizr.foundation.js"></script>
+  <script src="./javascripts/modernizr.foundation.js"></script>
 
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
@@ -155,8 +155,8 @@
     </div>
   </div>
 
-  <script src="/javascripts/foundation.min.js"></script>
-  <script src="/javascripts/jquery.to_json.js"></script>
-  <script src="/javascripts/app.js"></script>
+  <script src="./javascripts/foundation.min.js"></script>
+  <script src="./javascripts/jquery.to_json.js"></script>
+  <script src="./javascripts/app.js"></script>
 </body>
 </html>
